Add initial HTML structure for Bhaskara Foods

--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Bhaskara Foods 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BHASKARA FOOD</title>
+
+    <!-- LINK CSS -->
+    <link rel="stylesheet" href="assets/css/style.css">
+</head>
+<body>
+
+    <!-- HEADER -->
+    <header>
+        <h1>BHASKARA FOOD</h1>
+        <p>Train Food Ordering System</p>
+    </header>
+
+    <!-- MAIN CONTENT -->
+    <main>
+        <section>
+            <h2>Welcome</h2>
+            <p>This is your starter layout. You can add menus, buttons, images, and ordering system here.</p>
+        </section>
+    </main>
+
+    <!-- FOOTER -->
+    <footer>
+        <p>© 2025 BHASKARA FOOD</p>
+    </footer>
+
+    <!-- LINK JS -->
+    <script src="assets/js/main.js"></script>
+</body>
+</html>
