Revise index.html for Taxi Wala Packages layout
Updated the HTML structure and styles for the Taxi Wala Packages page.

--- a/index.html
+++ b/index.html
@@ -1,35 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BHASKARA FOOD</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>TAXI WALA PACKAGES – TIRUMALA TIRUPATI</title>
 
-    <!-- LINK CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background: #f5f5f5;
+  }
+
+  .banner {
+    width: 100%;
+    height: auto;
+  }
+
+  .container {
+    padding: 20px;
+    background: white;
+    margin: 10px;
+    border-radius: 10px;
+    box-shadow: 0 0 6px rgba(0,0,0,0.2);
+  }
+
+  h2 {
+    text-align: center;
+    color: #d12f2f;
+    margin-bottom: 10px;
+  }
+
+  label {
+    font-weight: bold;
+    display: block;
+    margin-top: 12px;
+  }
+
+  input, select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    border-radius: 5px;
+    border: 1px solid #999;
+  }
+
+  .whatsapp-btn {
+    background: #25D366;
+    color: white;
+    padding: 14px;
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    text-align: center;
+    border-radius: 8px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+  }
+</style>
 </head>
+
 <body>
 
-    <!-- HEADER -->
-    <header>
-        <h1>BHASKARA FOOD</h1>
-        <p>Train Food Ordering System</p>
-    </header>
+<!-- Banner Image -->
+<img src="/banner.jpg" class="banner" alt="Banner">
 
-    <!-- MAIN CONTENT -->
-    <main>
-        <section>
-            <h2>Welcome</h2>
-            <p>This is your starter layout. You can add menus, buttons, images, and ordering system here.</p>
-        </section>
-    </main>
+<div class="container">
+  <h2>TAXI WALA PACKAGES – TIRUMALA TIRUPATI</h2>
 
-    <!-- FOOTER -->
-    <footer>
-        <p>© 2025 BHASKARA FOOD</p>
-    </footer>
+  <label>Driver Name</label>
+  <input type="text" placeholder="Enter driver name">
 
-    <!-- LINK JS -->
-    <script src="assets/js/main.js"></script>
+  <label>Contact Number</label>
+  <input type="text" placeholder="Enter contact number">
+
+  <label>Taxi Number</label>
+  <input type="text" placeholder="Enter taxi number">
+
+  <label>Taxi Model</label>
+  <input type="text" placeholder="Enter taxi model (Innova, Etios, etc.)">
+
+  <label>Capacity</label>
+  <input type="text" placeholder="Example: 7 Seater">
+
+  <label>Packages</label>
+  <select>
+    <option>Select Package</option>
+    <option>One Day Tirumala</option>
+    <option>Tirupati Local</option>
+    <option>Airport Pickup / Drop</option>
+    <option>Sri Kalahasti</option>
+    <option>Golden Temple</option>
+  </select>
+
+  <!-- WhatsApp Link -->
+  <a class="whatsapp-btn"
+     href="https://wa.me/919154095125?text=Hello%20Sir,%20I%20am%20interested%20in%20Taxi%20Wala%20Packages.">
+     Contact on WhatsApp
+  </a>
+</div>
+
 </body>
 </html>
