--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <body>
 
 <!-- Banner Image -->
-<img src="/assets/images/banner.jpg" class="banner" alt="Banner">
+<img src="/Bhaskara_food/assets/images/banner.jpg" class="banner" alt="Banner">
 
 <div class="container">
   <h2>TAXI WALA PACKAGES – TIRUMALA TIRUPATI</h2>
