--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
     <option>Airport Pickup / Drop</option>
     <option>Sri Kalahasti</option>
     <option>Golden Temple</option>
+    <option>Arunachalam Temple</option>
+    <option>Kanipakam Temple</option>
+    <option>Tirutani Temple</option>
   </select>
 
   <!-- WhatsApp Link -->
