--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TAXI WALA PACKAGES – TIRUMALA TIRUPATI</title>
+<title>TAXI WALA TOUR PACKAGES – TIRUMALA TIRUPATI</title>
 
 <style>
   body {
