--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TAXI WALA TOUR PACKAGES <br> TIRUMALA TIRUPATI</title>
+<title>TAXI WALA TOUR PACKAGES - TIRUMALA TIRUPATI</title>
 
 <style>
   body {
@@ -68,7 +68,7 @@
 <img src="/Bhaskara_food/assets/images/banner.jpg" class="banner" alt="Banner">
 
 <div class="container">
-  <h2>TAXI WALA TOUR PACKAGES <br>TIRUMALA TIRUPATI</h2>
+  <h2>TAXI WALA TOUR PACKAGES - TIRUMALA TIRUPATI</h2>
 
   <label>Driver Name</label>
   <input type="text" placeholder="Enter driver name">
