--- a/drivers/driver1.html
+++ b/drivers/driver1.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Driver – Govind</title>
 
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background: #f2f2f2;
+    margin: 0;
+    padding: 0;
+  }
+
+  .card {
+    background: white;
+    margin: 15px;
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 8px rgba(0,0,0,0.2);
+  }
+
+  .driver-photo {
+    width: 100%;
+    height: 280px;
+    object-fit: cover;
+    border-radius: 10px;
+    margin-bottom: 15px;
+  }
+
+  h2 {
+    text-align: center;
+    margin-bottom: 20px;
+    color: #d12f2f;
+  }
+
+  .info {
+    font-size: 18px;
+    margin-bottom: 10px;
+    padding: 8px 0;
+    border-bottom: 1px solid #ddd;
+  }
+
+  .info span {
+    font-weight: bold;
+  }
+
+  .whatsapp-btn {
+    display: block;
+    background: #25D366;
+    padding: 14px;
+    color: white;
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 20px;
+    font-size: 18px;
+    text-decoration: none;
+    font-weight: bold;
+  }
+</style>
+</head>
+
+<body>
+
+<div class="card">
+  <img src="assets/images/driver1.jpg" class="driver-photo" alt="Driver Govind">
+
+  <h2>Driver Details</h2>
+
+  <div class="info"><span>Name:</span> Govind</div>
+  <div class="info"><span>Phone Number:</span> 6306788765</div>
+  <div class="info"><span>Taxi Number:</span> AP 03 T 1435</div>
+  <div class="info"><span>Experience:</span> 12 Years</div>
+
+  <a href="https://wa.me/916306788765?text=Hello%20Govind,%20I%20need%20taxi%20service."
+     class="whatsapp-btn">
+     Contact on WhatsApp
+  </a>
+</div>
+
+</body>
+</html>
