--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
 
 <!-- Banner Image -->
-<img src="/Bhaskara_food/assets/images/banner.jpg" class="banner" alt="Banner">
+<img src="/Bhaskara_food/assets/images/lemenrice.jpg" class="lemenrice" alt="lemenrice">
 
 <div class="container">
   <h2>TAXI WALA TOUR PACKAGES - TIRUMALA TIRUPATI</h2>
