--- a/index.html
+++ b/index.html
@@ -3,109 +3,266 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>TAXI WALA TOUR PACKAGES - TIRUMALA TIRUPATI</title>
+<title>Taxi Wala Tour Packages</title>
 
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background: #f5f5f5;
-  }
+/* BASIC RESET */
+body, h1, h2, h3, p, div, img { margin:0; padding:0; box-sizing:border-box; }
+body { font-family: Arial, sans-serif; background:#f5f5f5; }
 
-  .banner {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-  }
-  
+/* BANNER */
+.banner {
+    width:100%;
+    height:200px;
+    background:url('assets/images/banner.jpg') center/cover no-repeat;
+    position:relative;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    color:white;
+}
+.banner h1 { font-size:28px; font-weight:bold; text-shadow:2px 2px 5px black; }
+.banner h2 { font-size:18px; margin-top:8px; text-shadow:1px 1px 4px black; }
 
-  .container {
-    padding: 20px;
-    background: white;
-    margin: 10px;
-    border-radius: 10px;
-    box-shadow: 0 0 6px rgba(0,0,0,0.2);
-  }
+/* DRIVER SECTION */
+.driver-section {
+    background:white;
+    margin:15px;
+    padding:15px;
+    border-radius:10px;
+    box-shadow:0 0 8px rgba(0,0,0,0.1);
+}
+.driver-box {
+    display:flex;
+    align-items:center;
+    margin-bottom:15px;
+}
+.driver-box img {
+    width:80px;
+    height:80px;
+    border-radius:10px;
+    margin-right:10px;
+}
 
-  h2 {
-    text-align: center;
-    color: #d12f2f;
-    margin-bottom: 10px;
-  }
+/* LANGUAGE BUTTONS */
+.lang-buttons {
+    text-align:center;
+    margin:10px 0;
+}
+.lang-buttons button {
+    padding:8px 15px;
+    margin:5px;
+    border:none;
+    background:#ff6600;
+    color:white;
+    border-radius:5px;
+}
 
-  label {
-    font-weight: bold;
-    display: block;
-    margin-top: 12px;
-  }
+/* TEMPLES GRID */
+.temple-grid {
+    display:grid;
+    grid-template-columns:repeat(2, 1fr);
+    gap:10px;
+    padding:10px;
+}
+.temple {
+    background:white;
+    border-radius:10px;
+    box-shadow:0 0 5px rgba(0,0,0,0.1);
+    padding:5px;
+    text-align:center;
+}
+.temple img {
+    width:100%;
+    height:110px;
+    border-radius:10px;
+}
+.temple h3 { margin-top:5px; font-size:16px; }
 
-  input, select {
-    width: 100%;
-    padding: 10px;
-    margin-top: 5px;
-    border-radius: 5px;
-    border: 1px solid #999;
-  }
+/* POPUP BOX */
+.popup {
+    display:none;
+    position:fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    background:rgba(0,0,0,0.7);
+    justify-content:center;
+    align-items:center;
+}
+.popup-content {
+    background:white;
+    width:90%;
+    max-height:80%;
+    overflow:auto;
+    padding:15px;
+    border-radius:10px;
+}
+.close-btn {
+    background:red;
+    color:white;
+    padding:5px 10px;
+    border:none;
+    float:right;
+    margin-bottom:10px;
+}
 
-  .whatsapp-btn {
-    background: #25D366;
-    color: white;
-    padding: 14px;
-    display: block;
-    width: 100%;
-    margin-top: 20px;
-    text-align: center;
-    border-radius: 8px;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
-  }
+/* CUSTOMER FORM */
+.form-section {
+    background:white;
+    margin:10px;
+    padding:15px;
+    border-radius:10px;
+    box-shadow:0 0 8px rgba(0,0,0,0.1);
+}
+input {
+    width:100%;
+    padding:10px;
+    margin:5px 0;
+    border:1px solid #ccc;
+    border-radius:5px;
+}
+
+/* WHATSAPP FLOAT */
+.whatsapp-btn {
+    position:fixed;
+    bottom:20px;
+    right:20px;
+    background:#25D366;
+    color:white;
+    padding:12px 15px;
+    border-radius:50%;
+    font-size:22px;
+    text-align:center;
+}
 </style>
 </head>
 
 <body>
 
-<!-- Banner Image -->
-<img src="/Bhaskara_food/assets/images/banner.jpg" class="banner" alt="banner">
-
-<div class="container">
-  <h2>TAXI WALA TOUR PACKAGES - TIRUMALA TIRUPATI</h2>
-
-  <label>Driver Name</label>
-  <input type="text" placeholder="Enter driver name">
-
-  <label>Contact Number</label>
-  <input type="text" placeholder="Enter contact number">
-
-  <label>Taxi Number</label>
-  <input type="text" placeholder="Enter taxi number">
-
-  <label>Taxi Model</label>
-  <input type="text" placeholder="Enter taxi model (Innova, Etios, etc.)">
-
-  <label>Capacity</label>
-  <input type="text" placeholder="Example: 7 Seater">
-
-  <label>Packages</label>
-  <select>
-    <option>Select Package</option>
-    <option>One Day Tirumala</option>
-    <option>Tirupati Local</option>
-    <option>Airport Pickup / Drop</option>
-    <option>Sri Kalahasti</option>
-    <option>Golden Temple</option>
-    <option>Arunachalam Temple</option>
-    <option>Kanipakam Temple</option>
-    <option>Tirutani Temple</option>
-  </select>
-
-  <!-- WhatsApp Link -->
-  <a class="whatsapp-btn"
-     href="https://wa.me/919154095125?text=Hello%20Sir,%20I%20am%20interested%20in%20Taxi%20Wala%20Packages.">
-     Contact on WhatsApp
-  </a>
+<!-- BANNER -->
+<div class="banner">
+    <div>
+        <h1>Taxi Wala Tour Packages</h1>
+        <h2>Shiva Taxi</h2>
+    </div>
 </div>
+
+<!-- DRIVER DETAILS -->
+<div class="driver-section">
+    <h2>Drivers Information</h2><br>
+
+    <div class="driver-box">
+        <img src="Bhaskar_food/assets/images/driver1.jpg">
+        <div>
+            <h3>Driver: Shiva</h3>
+            <p>Taxi No: AP 04 T 5467</p>
+            <p>Stand: Tirumala</p>
+        </div>
+    </div>
+
+    <div class="driver-box">
+        <img src="Bhaskar_food/assets/images/driver2.jpg">
+        <div>
+            <h3>Driver: Venkat</h3>
+            <p>Taxi No: AP 03 T 0786</p>
+            <p>Stand: Tirumala</p>
+        </div>
+    </div>
+
+    <div class="driver-box">
+        <img src="Bhaskar_food/assets/images/driver3.jpg">
+        <div>
+            <h3>Driver: Pawan</h3>
+            <p>Taxi No: AP 02 U 1265</p>
+            <p>Stand: Tirumala</p>
+        </div>
+    </div>
+</div>
+
+<!-- LANGUAGES -->
+<div class="lang-buttons">
+    <button onclick="setLang('en')">English</button>
+    <button onclick="setLang('te')">తెలుగు</button>
+    <button onclick="setLang('ta')">தமிழ்</button>
+    <button onclick="setLang('ka')">ಕನ್ನಡ</button>
+    <button onclick="setLang('hi')">हिंदी</button>
+    <button onclick="setLang('ma')">मराठी</button>
+</div>
+
+<!-- TEMPLES SECTION -->
+<h2 style="text-align:center;margin-top:10px;">Temples</h2>
+
+<div class="temple-grid">
+
+    <div class="temple" onclick="openPopup('Papavinashnam')">
+        <img src="Bhaskar_food/assets/images/temple1.jpg">
+        <h3>Papavinashnam</h3>
+    </div>
+
+    <div class="temple" onclick="openPopup('Akash Ganga')">
+        <img src="Bhaskar_food/assets/images/temple2.jpg">
+        <h3>Akash Ganga</h3>
+    </div>
+
+    <div class="temple" onclick="openPopup('Venugopala Swamy Temple')">
+        <img src="Bhaskar_food/assets/images/temple3.jpg">
+        <h3>Venugopala Swamy Temple</h3>
+    </div>
+
+    <div class="temple" onclick="openPopup('Japali Hanuman Temple')">
+        <img src="Bhaskar_food/assets/images/temple4.jpg">
+        <h3>Japali Hanuman Temple</h3>
+    </div>
+
+    <div class="temple" onclick="openPopup('Sila Thoranam')">
+        <img src="Bhaskar_food/assets/images/temple5.jpg">
+        <h3>Sila Thoranam</h3>
+    </div>
+
+    <div class="temple" onclick="openPopup('Srivari Padalu')">
+        <img src="Bhaskar_food/assets/images/temple6.jpg">
+        <h3>Srivari Padalu</h3>
+    </div>
+
+</div>
+
+<!-- POPUP -->
+<div class="popup" id="popup">
+    <div class="popup-content" id="popup-content">
+        <button class="close-btn" onclick="closePopup()">Close</button>
+        <h2 id="popup-title"></h2>
+        <p id="popup-desc"></p>
+    </div>
+</div>
+
+<!-- CUSTOMER FORM -->
+<div class="form-section">
+    <h2>Customer Details</h2>
+    <input type="text" placeholder="Your Name">
+    <input type="number" placeholder="Phone Number">
+    <input type="number" placeholder="No. of Persons">
+    <input type="text" placeholder="Address">
+</div>
+
+<!-- WHATSAPP FLOAT -->
+<a class="whatsapp-btn" href="https://wa.me/916306788765" target="_blank">💬</a>
+
+<script>
+function openPopup(name) {
+    document.getElementById('popup').style.display='flex';
+    document.getElementById('popup-title').innerText=name;
+    document.getElementById('popup-desc').innerText="Full temple description will appear here in selected language.";
+}
+
+function closePopup() {
+    document.getElementById('popup').style.display='none';
+}
+
+function setLang(lang) {
+    alert("Language changed: " + lang + " (I will add full translations when you send text)");
+}
+</script>
 
 </body>
 </html>
