--- a/index.html
+++ b/index.html
@@ -1,187 +1,268 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Taxi Wala Tour packages - shiva Taxi</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Taxi Wala Tour Packages</title>
+
+<style>
+/* BASIC RESET */
+body, h1, h2, h3, p, div, img { margin:0; padding:0; box-sizing:border-box; }
+body { font-family: Arial, sans-serif; background:#f5f5f5; }
+
+/* BANNER */
+.banner {
+    width:100%;
+    height:200px;
+    background:url('assets/images/banner.jpg') center/cover no-repeat;
+    position:relative;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    text-align:center;
+    color:white;
+}
+.banner h1 { font-size:28px; font-weight:bold; text-shadow:2px 2px 5px black; }
+.banner h2 { font-size:18px; margin-top:8px; text-shadow:1px 1px 4px black; }
+
+/* DRIVER SECTION */
+.driver-section {
+    background:white;
+    margin:15px;
+    padding:15px;
+    border-radius:10px;
+    box-shadow:0 0 8px rgba(0,0,0,0.1);
+}
+.driver-box {
+    display:flex;
+    align-items:center;
+    margin-bottom:15px;
+}
+.driver-box img {
+    width:80px;
+    height:80px;
+    border-radius:10px;
+    margin-right:10px;
+}
+
+/* LANGUAGE BUTTONS */
+.lang-buttons {
+    text-align:center;
+    margin:10px 0;
+}
+.lang-buttons button {
+    padding:8px 15px;
+    margin:5px;
+    border:none;
+    background:#ff6600;
+    color:white;
+    border-radius:5px;
+}
+
+/* TEMPLES GRID */
+.temple-grid {
+    display:grid;
+    grid-template-columns:repeat(2, 1fr);
+    gap:10px;
+    padding:10px;
+}
+.temple {
+    background:white;
+    border-radius:10px;
+    box-shadow:0 0 5px rgba(0,0,0,0.1);
+    padding:5px;
+    text-align:center;
+}
+.temple img {
+    width:100%;
+    height:110px;
+    border-radius:10px;
+}
+.temple h3 { margin-top:5px; font-size:16px; }
+
+/* POPUP BOX */
+.popup {
+    display:none;
+    position:fixed;
+    top:0; left:0;
+    width:100%; height:100%;
+    background:rgba(0,0,0,0.7);
+    justify-content:center;
+    align-items:center;
+}
+.popup-content {
+    background:white;
+    width:90%;
+    max-height:80%;
+    overflow:auto;
+    padding:15px;
+    border-radius:10px;
+}
+.close-btn {
+    background:red;
+    color:white;
+    padding:5px 10px;
+    border:none;
+    float:right;
+    margin-bottom:10px;
+}
+
+/* CUSTOMER FORM */
+.form-section {
+    background:white;
+    margin:10px;
+    padding:15px;
+    border-radius:10px;
+    box-shadow:0 0 8px rgba(0,0,0,0.1);
+}
+input {
+    width:100%;
+    padding:10px;
+    margin:5px 0;
+    border:1px solid #ccc;
+    border-radius:5px;
+}
+
+/* WHATSAPP FLOAT */
+.whatsapp-btn {
+    position:fixed;
+    bottom:20px;
+    right:20px;
+    background:#25D366;
+    color:white;
+    padding:12px 15px;
+    border-radius:50%;
+    font-size:22px;
+    text-align:center;
+}
+</style>
 </head>
+
 <body>
-  <!-- Banner -->
-  <header class="banner">
-    <div class="banner-overlay">
-      <h1 class="title">Taxi Wala Tour packages</h1>
-      <p class="subtitle">shiva Taxi</p>
+
+<!-- BANNER -->
+<div class="banner">
+    <div>
+        <h1>Taxi Wala Tour Packages</h1>
+        <h2>Shiva Taxi</h2>
     </div>
-  </header>
+</div>
 
-  <!-- Drivers + Language Buttons -->
-  <section class="top-row">
-    <div class="drivers">
-      <h2>Drivers</h2>
-      <div class="driver-list">
-        <a class="driver-card" href="drivers/driver 1.html">
-          <img src="Bhaskar_food/assets/images/driver 1.jpg" alt="driver shiva" onerror="this.onerror=null;this.src='assets/images/driver1.jpg'"/>
-          <div class="driver-info">
-            <strong>Shiva</strong>
-            <span>Taxi: AP04 T5467</span>
-            <span>Stand: Tirumala</span>
-          </div>
-        </a>
+<!-- DRIVER DETAILS -->
+<div class="driver-section">
+    <h2>Drivers Information</h2><br>
 
-        <a class="driver-card" href="drivers/driver2.html">
-          <img src="Bhaskar_food/assets/images/driver2.jpg" alt="driver venkat" onerror="this.onerror=null;this.src='assets/images/driver2.jpg'"/>
-          <div class="driver-info">
-            <strong>Venkat</strong>
-            <span>Taxi: AP 03 T 0786</span>
-            <span>Stand: Tirumala</span>
-          </div>
-        </a>
-
-        <a class="driver-card" href="drivers/driver3.html">
-          <img src="Bhaskar_food/assets/images/driver3.jpg" alt="driver pawan" onerror="this.onerror=null;this.src='assets/images/driver3.jpg'"/>
-          <div class="driver-info">
-            <strong>Pawan</strong>
-            <span>Taxi: AP 02 U1265</span>
-            <span>Stand: Tirumala</span>
-          </div>
-        </a>
-      </div>
+    <div class="driver-box">
+        <img src="Bhaskar_food/assets/images/driver1.jpg">
+        <div>
+            <h3>Driver: Shiva</h3>
+            <p>Taxi No: AP 04 T 5467</p>
+            <p>Stand: Tirumala</p>
+        </div>
     </div>
 
-    <div class="lang-and-book">
-      <div class="language-buttons">
-        <button class="lang-btn active" data-lang="en">English</button>
-        <button class="lang-btn" data-lang="te">తెలుగు</button>
-        <button class="lang-btn" data-lang="ta">தமிழ்</button>
-        <button class="lang-btn" data-lang="kn">ಕನ್ನಡ</button>
-        <button class="lang-btn" data-lang="mr">मराठी</button>
-        <button class="lang-btn" data-lang="hi">हिन्दी</button>
-      </div>
-
-      <div class="booking-card">
-        <h3>Book Now</h3>
-        <form id="bookingForm" class="booking-form" action="#" onsubmit="return sendWhatsApp();">
-          <label for="custName">Name</label>
-          <input id="custName" name="name" required />
-
-          <label for="custPhone">Phone number</label>
-          <input id="custPhone" name="phone" pattern="[0-9+ ]{7,20}" required />
-
-          <label for="persons">Number of persons</label>
-          <select id="persons" name="persons">
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5+</option>
-          </select>
-
-          <label for="address">Address / Pickup point</label>
-          <input id="address" name="address" required />
-
-          <label for="driverSelect">Choose driver (optional)</label>
-          <select id="driverSelect" name="driver">
-            <option value="Shiva - AP04 T5467">Shiva - AP04 T5467</option>
-            <option value="Venkat - AP 03 T 0786">Venkat - AP 03 T 0786</option>
-            <option value="Pawan - AP 02 U1265">Pawan - AP 02 U1265</option>
-          </select>
-
-          <button type="submit" class="whatsapp-submit">Send on WhatsApp</button>
-        </form>
-      </div>
+    <div class="driver-box">
+        <img src="Bhaskar_food/assets/images/driver2.jpg">
+        <div>
+            <h3>Driver: Venkat</h3>
+            <p>Taxi No: AP 03 T 0786</p>
+            <p>Stand: Tirumala</p>
+        </div>
     </div>
-  </section>
 
-  <!-- Temples Grid -->
-  <main class="temples">
-    <h2 class="section-title">Temples</h2>
-    <div class="grid">
-      <!-- Template for each temple card -->
-      <div class="card" data-temple="1">
-        <img src="Bhaskar_food/assets/images/temple1.jpg" alt="papavinashnam" onerror="this.onerror=null;this.src='assets/images/temple1.jpg'"/>
-        <div class="card-body">
-          <h3 class="temple-title" data-title-en="papavinashnam">papavinashnam</h3>
-          <p class="short-desc" data-desc-en="A holy temple famous for peace and cleansing of sins.">A holy temple famous for peace and cleansing of sins.</p>
-          <button class="view-btn" data-temple="1">View Details</button>
+    <div class="driver-box">
+        <img src="Bhaskar_food/assets/images/driver3.jpg">
+        <div>
+            <h3>Driver: Pawan</h3>
+            <p>Taxi No: AP 02 U 1265</p>
+            <p>Stand: Tirumala</p>
         </div>
-      </div>
-
-      <div class="card" data-temple="2">
-        <img src="Bhaskar_food/assets/images/temple2.jpg" alt="AkashGanga" onerror="this.onerror=null;this.src='assets/images/temple2.jpg'"/>
-        <div class="card-body">
-          <h3 class="temple-title" data-title-en="AkashGanga">AkashGanga</h3>
-          <p class="short-desc" data-desc-en="A scenic shrine with waterfall-like streams and a peaceful atmosphere.">A scenic shrine with waterfall-like streams and a peaceful atmosphere.</p>
-          <button class="view-btn" data-temple="2">View Details</button>
-        </div>
-      </div>
-
-      <div class="card" data-temple="3">
-        <img src="Bhaskar_food/assets/images/temple3.jpg" alt="Venugopal Swamy temple" onerror="this.onerror=null;this.src='assets/images/temple3.jpg'"/>
-        <div class="card-body">
-          <h3 class="temple-title" data-title-en="Venugopal Swamy temple">Venugopal Swamy temple</h3>
-          <p class="short-desc" data-desc-en="Dedicated to Lord Krishna, known for its beautiful carvings and peaceful poojas.">Dedicated to Lord Krishna, known for its beautiful carvings and peaceful poojas.</p>
-          <button class="view-btn" data-temple="3">View Details</button>
-        </div>
-      </div>
-
-      <div class="card" data-temple="4">
-        <img src="Bhaskar_food/assets/images/temple4.jpg" alt="Japali Hanuman Temple" onerror="this.onerror=null;this.src='assets/images/temple4.jpg'"/>
-        <div class="card-body">
-          <h3 class="temple-title" data-title-en="Japali Hanuman Temple">Japali Hanuman Temple</h3>
-          <p class="short-desc" data-desc-en="A strong Hanuman temple believed to protect devotees and grant courage.">A strong Hanuman temple believed to protect devotees and grant courage.</p>
-          <button class="view-btn" data-temple="4">View Details</button>
-        </div>
-      </div>
-
-      <div class="card" data-temple="5">
-        <img src="Bhaskar_food/assets/images/temple5.jpg" alt="Sila thornam" onerror="this.onerror=null;this.src='assets/images/temple5.jpg'"/>
-        <div class="card-body">
-          <h3 class="temple-title" data-title-en="Sila thornam">Sila thornam</h3>
-          <p class="short-desc" data-desc-en="An ancient rock formation worship site with historic significance.">An ancient rock formation worship site with historic significance.</p>
-          <button class="view-btn" data-temple="5">View Details</button>
-        </div>
-      </div>
-
-      <div class="card" data-temple="6">
-        <img src="Bhaskar_food/assets/images/temple6.jpg" alt="Srivari Padalu" onerror="this.onerror=null;this.src='assets/images/temple6.jpg'"/>
-        <div class="card-body">
-          <h3 class="temple-title" data-title-en="Srivari Padalu">Srivari Padalu</h3>
-          <p class="short-desc" data-desc-en="Famous for holy footsteps of the Lord; pilgrims visit to offer prayers.">Famous for holy footsteps of the Lord; pilgrims visit to offer prayers.</p>
-          <button class="view-btn" data-temple="6">View Details</button>
-        </div>
-      </div>
     </div>
-  </main>
+</div>
 
-  <!-- Modal for details -->
-  <div id="templeModal" class="modal" aria-hidden="true">
-    <div class="modal-content">
-      <button id="closeModal" class="close">&times;</button>
-      <div class="modal-left">
-        <img id="modalImage" src="" alt="temple large" />
-      </div>
-      <div class="modal-right">
-        <h2 id="modalTitle"></h2>
-        <p id="modalShort"></p>
+<!-- LANGUAGES -->
+<div class="lang-buttons">
+    <button onclick="setLang('en')">English</button>
+    <button onclick="setLang('te')">తెలుగు</button>
+    <button onclick="setLang('ta')">தமிழ்</button>
+    <button onclick="setLang('ka')">ಕನ್ನಡ</button>
+    <button onclick="setLang('hi')">हिंदी</button>
+    <button onclick="setLang('ma')">मराठी</button>
+</div>
 
-        <div class="multi-lang">
-          <h4>Details</h4>
-          <div id="detailText"></div>
-        </div>
-      </div>
+<!-- TEMPLES SECTION -->
+<h2 style="text-align:center;margin-top:10px;">Temples</h2>
+
+<div class="temple-grid">
+
+    <div class="temple" onclick="openPopup('Papavinashnam')">
+        <img src="Bhaskar_food/assets/images/temple1.jpg">
+        <h3>Papavinashnam</h3>
     </div>
-  </div>
 
-  <!-- WhatsApp floating button -->
-  <a id="whatsappFloat" class="whatsapp-float" href="#" target="_blank" title="Chat on WhatsApp">
-    <img src="assets/images/whatsapp-icon.png" alt="WhatsApp" onerror="this.style.display='none'"/>
-    <span>WhatsApp</span>
-  </a>
+    <div class="temple" onclick="openPopup('Akash Ganga')">
+        <img src="Bhaskar_food/assets/images/temple2.jpg">
+        <h3>Akash Ganga</h3>
+    </div>
 
-  <!-- Scroll-to-top -->
-  <button id="scrollTop" class="scroll-top" title="Scroll to top">▲</button>
+    <div class="temple" onclick="openPopup('Venugopala Swamy Temple')">
+        <img src="Bhaskar_food/assets/images/temple3.jpg">
+        <h3>Venugopala Swamy Temple</h3>
+    </div>
 
-  <script src="script.js"></script>
+    <div class="temple" onclick="openPopup('Japali Hanuman Temple')">
+        <img src="Bhaskar_food/assets/images/temple4.jpg">
+        <h3>Japali Hanuman Temple</h3>
+    </div>
+
+    <div class="temple" onclick="openPopup('Sila Thoranam')">
+        <img src="Bhaskar_food/assets/images/temple5.jpg">
+        <h3>Sila Thoranam</h3>
+    </div>
+
+    <div class="temple" onclick="openPopup('Srivari Padalu')">
+        <img src="Bhaskar_food/assets/images/temple6.jpg">
+        <h3>Srivari Padalu</h3>
+    </div>
+
+</div>
+
+<!-- POPUP -->
+<div class="popup" id="popup">
+    <div class="popup-content" id="popup-content">
+        <button class="close-btn" onclick="closePopup()">Close</button>
+        <h2 id="popup-title"></h2>
+        <p id="popup-desc"></p>
+    </div>
+</div>
+
+<!-- CUSTOMER FORM -->
+<div class="form-section">
+    <h2>Customer Details</h2>
+    <input type="text" placeholder="Your Name">
+    <input type="number" placeholder="Phone Number">
+    <input type="number" placeholder="No. of Persons">
+    <input type="text" placeholder="Address">
+</div>
+
+<!-- WHATSAPP FLOAT -->
+<a class="whatsapp-btn" href="https://wa.me/916306788765" target="_blank">💬</a>
+
+<script>
+function openPopup(name) {
+    document.getElementById('popup').style.display='flex';
+    document.getElementById('popup-title').innerText=name;
+    document.getElementById('popup-desc').innerText="Full temple description will appear here in selected language.";
+}
+
+function closePopup() {
+    document.getElementById('popup').style.display='none';
+}
+
+function setLang(lang) {
+    alert("Language changed: " + lang + " (I will add full translations when you send text)");
+}
+</script>
+
 </body>
 </html>
